--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<<<<<<< HEAD
-Hi hope your having a great day!!!
- -Melanie 
-=======
-Hi Hope your having a great day!!!
-    -Melanie 
->>>>>>> dadb2ced94b83d287c198322b49c5fa2f744f2bb
+<h1>Name</h1>
+<p>Melanie Clamp</p>
+<h2>Description</h2>
+<p>Hi hope your having a great day</p>
+<a href="https://www.youtube.com/">
+  Click me!</a>
