--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <h1>Name</h1>
+<br/>
+<br/>
 <p>Melanie Clamp</p>
 <h2>Description</h2>
 <p>Hi hope your having a great day</p>
 <a href="https://www.youtube.com/">
   Click me!</a>
+<br/>
+<button>Click Me!</button>
+<br/>
+<img src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg"/>
+<br/>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRjlmdCn_uJRD4398vmSslkoyvCRko6I-oofoyNwy895PUrxo5H"/>
