deleted click button

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <h2>Description</h2>
 <p>Hi hope your having a great day</p>
 <a href="https://www.youtube.com/">
-  Click me!</a>
-<br/>
-<button>Click Me!</button>
+<button>Click me!</button></a>
 <br/>
 <img src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg"/>
 <br/>
