--- a/index.html
+++ b/index.html
@@ -10,3 +10,17 @@
 <img src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg"/>
 <br/>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRjlmdCn_uJRD4398vmSslkoyvCRko6I-oofoyNwy895PUrxo5H"/>
+<table>
+  <tr>
+    <th>Alli</th>
+    <th>Melanie</th>
+  </tr>
+  <tr>
+    <td>17</td>
+    <td>27</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>07</td>
+  </tr>
+ </table>    
