added Table heading

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <img src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg"/>
 <br/>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRjlmdCn_uJRD4398vmSslkoyvCRko6I-oofoyNwy895PUrxo5H"/>
+<h3>Table</h3>
 <table>
   <tr>
     <th>Alli</th>
@@ -23,4 +24,4 @@
     <td>11</td>
     <td>07</td>
   </tr>
- </table>    
+ </table>
