added text size

--- a/index.html
+++ b/index.html
@@ -1,15 +1,51 @@
-<h1>Name</h1>
+<HTML>
+  <head>
+    <style>
+      body{
+        background-color: lavender;
+      }
+      h1{
+        Color:blue;
+        text-align: center;
+        font-size: 100px;
+      }
+      .day{
+        color: teal;
+      }
+      #Clamp{
+        color: purple;
+      }
+      .name {
+        font-size: 50px;
+      }
+      .table{
+        color: red;
+        text-align: center;
+      }
+      table {
+        margin-left:auto;
+        margin-right:auto;
+      }
+      .Bold{
+        font-weight: bolder;
+        text-decoration: overline;
+      }
+    </style>
+<h1>Welcome to my website</h1>
 <br/>
 <br/>
-<p>Melanie Clamp</p>
+<div class="name">
+<p id="Clamp">Melanie Clamp</p>
+</div>
 <h2>Description</h2>
-<p>Hi hope your having a great day</p>
+<p class="day">Hi hope your having a <span class="bold">Great</span> day</p>
 <a href="https://www.youtube.com/">
 <button>Click me!</button></a>
 <br/>
 <img src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg"/>
 <br/>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRjlmdCn_uJRD4398vmSslkoyvCRko6I-oofoyNwy895PUrxo5H"/>
+<div class="table">
 <h3>Table</h3>
 <table>
   <tr>
@@ -25,3 +61,5 @@
     <td>07</td>
   </tr>
  </table>
+</div>
+</HTML>
