change your to you are

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p id="Clamp">Melanie Clamp</p>
 </div>
 <h2>Description</h2>
-<p class="day">Hi hope your having a <span class="bold">Great</span> day</p>
+<p class="day">Hi hope you are having a <span class="bold">Great</span> day</p>
 <a href="https://www.youtube.com/">
 <button>Click me!</button></a>
 <br/>
